add actions change

--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,9 +1,9 @@
 name: Waka Readme
 
-on:  
+on:
+  workflow_dispatch: 
   schedule:
     - cron: "0 0 * * *"
-
 jobs:
   update-readme:
     name: Update Readme with Metrics
