--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,6 +1,7 @@
 name: Waka Readme
 
 on:
+  push:
   workflow_dispatch: 
   schedule:
     - cron: "0 0 * * *"
@@ -12,3 +13,4 @@ jobs:
       - uses: gustavoylc/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
