--- a/.github/workflows/waka-readme-stats.yml
+++ b/.github/workflows/waka-readme-stats.yml
@@ -19,3 +19,6 @@ jobs:
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_PROJECTS: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
