--- a/.github/workflows/waka-readme-stats.yml
+++ b/.github/workflows/waka-readme-stats.yml
@@ -22,3 +22,4 @@ jobs:
           SHOW_TIMEZONE: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "False"
+          SYMBOL_VERSION: 2
